[package]
name = "n1"
version = "0.1.0"
authors = ["Jeremie Simon <jeremie.a.simon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.0"
rayon = "*"
num_cpus = "1.12.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
atomic_refcell = "0.1.6"